unpackaged/main/default/objects/Trial_Request__c/fields/TEMP_Is_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Is_Score_Threshold__c</fullName>
    <formula>IF(ISPICKVAL(Brand__c, &quot;MyCase&quot;) &amp;&amp;
   ISPICKVAL(Type__c, &quot;Score Threshold&quot;),
    &quot;Exclude&quot;,&quot;Include&quot;)</formula>
    <label>TEMP - Is Score Threshold</label>
    <type>Text</type>
</CustomField>