unpackaged/main/default/objects/Trial_Request__c/fields/TEMP_Payments_Applications__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Payments_Applications__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &quot;Self-Serve Sign Up&quot;) &amp;&amp;
  NOT(CONTAINS(Person_Owner_Role__c, &quot;Account Executive&quot;)) &amp;&amp;
  NOT(CONTAINS(Person_Owner_Role__c, &quot;Account Manager&quot;)) &amp;&amp;
  NOT(CONTAINS(Person_Owner_Role__c, &quot;BDR&quot;)) &amp;&amp;
  NOT(CONTAINS(Person_Owner_Role__c, &quot;SDR&quot;)),
  &quot;Exclude&quot;,&quot;Include&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEMP - Payments Applications</label>
    <type>Text</type>
</CustomField>