unpackaged/main/default/objects/Trial_Request__c/fields/TEMP_Trial_Demo_Company_Keywords__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Trial_Demo_Company_Keywords__c</fullName>
    <formula>IF(
   ISPICKVAL(Brand__c, &quot;MyCase&quot;) &amp;&amp;
   ISPICKVAL(Type__c, &quot;Trial&quot;) &amp;&amp;
   ISBLANK(Opportunity__c) &amp;&amp; 
 (
  CONTAINS(LOWER(Person_Company__c), &quot;Test&quot;) ||
  CONTAINS(LOWER(Person_Company__c), &quot;heating&quot;) ||
  CONTAINS(LOWER(Person_Company__c), &quot;roofing&quot;) ||
  CONTAINS(LOWER(Person_Company__c), &quot;cooling&quot;) ||
  CONTAINS(LOWER(Person_Company__c), &quot;flooring&quot;) ||
  LOWER(Person_Company__c) = &quot;none&quot; ||
  LOWER(Person_Company__c) = &quot;na&quot; ||
  LOWER(Person_Company__c) = &quot;n/a&quot; ),
  &quot;Exclude&quot;,&quot;Include&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEMP - Trial/Demo Company Keywords</label>
    <type>Text</type>
</CustomField>