unpackaged/main/default/objects/Trial_Request__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if inbound request is being tested</description>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>