unpackaged/main/default/objects/Trial_Request__c/fields/Time_to_Response_Min__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Response_Min__c</fullName>
    <description>This calculates the number of minutes between the MQL Date and the first completed Task. IT is calculated and populated by CRM Analytics.</description>
    <inlineHelpText># of minutes between the MQL and the first completed task.</inlineHelpText>
    <label>Time to Response (Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>