unpackaged/main/default/objects/Trial_Request__c/fields/Trial_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Expiration_Date__c</fullName>
    <label>Trial Expiration Date</label>
    <type>Date</type>
</CustomField>