unpackaged/main/default/objects/Trial_Request__c/fields/Trial_Intent_Provided__c.field-meta.xml
<CustomField>
    <fullName>Trial_Intent_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-checked TRUE from Workato if trial requestor completes intent and interests survey</description>
    <label>Trial Intent Provided</label>
    <type>Checkbox</type>
</CustomField>