unpackaged/main/default/objects/Trial_Request__c/fields/Trial_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Trial_Outcome__c</fullName>
    <label>Trial Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>