unpackaged/main/default/objects/Trial_Request__c/fields/Trial_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Trial_Rejected_Reason__c</fullName>
    <description>Reason for not granting trial activation to trial request</description>
    <label>Trial Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Trial</fullName>
            </value>
            <value>
                <fullName>Active Customer</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Fake</fullName>
            </value>
            <value>
                <fullName>Junk Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>