unpackaged/main/default/objects/Trial_Request__c/fields/Trial_Status__c.field-meta.xml
<CustomField>
    <fullName>Trial_Status__c</fullName>
    <label>Trial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Pending Activation</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>