unpackaged/main/default/objects/Trial_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Summarizes what was requested by the prospect/customer</description>
    <inlineHelpText>Summarizes what was requested by the prospect/customer</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call In</fullName>
            </value>
            <value>
                <fullName>Contact Request</fullName>
            </value>
            <value>
                <fullName>CSQL</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>MQA</fullName>
            </value>
            <value>
                <fullName>Partner Oath</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Score Threshold</fullName>
            </value>
            <value>
                <fullName>Self-Serve Sign Up</fullName>
            </value>
            <value>
                <fullName>Sign Up</fullName>
            </value>
            <value>
                <fullName>Software Advice</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>