unpackaged/main/default/objects/Trial_Request__c/fields/Validated_Email__c.field-meta.xml
<CustomField>
    <fullName>Validated_Email__c</fullName>
    <description>Email address validated with any instances of &quot;+xyz...&quot; added to it</description>
    <inlineHelpText>Email address validated with any instances of &quot;+xyz...&quot; added to it</inlineHelpText>
    <label>Validated Email</label>
    <type>Email</type>
</CustomField>