unpackaged/main/default/objects/Trial_Request__c/fields/Vetted_By__c.field-meta.xml
<CustomField>
    <fullName>Vetted_By__c</fullName>
    <formula>IF (DQ_Assigned__c = TRUE,

&quot;DQ&quot;, &quot;Automation&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vetted By</label>
    <type>Text</type>
</CustomField>