unpackaged/main/default/objects/Trial_Request__c/fields/Won__c.field-meta.xml
<CustomField>
    <fullName>Won__c</fullName>
    <formula>IF( 
OR( 
TEXT(Opportunity__r.StageName) = &quot;Closed Won&quot;, 
TEXT(Trial_Status__c) = &quot;Converted&quot; ),
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>