unpackaged/main/default/objects/Trial_Request__c/fields/zzIs_MQL__c.field-meta.xml
<CustomField>
    <fullName>zzIs_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE when inbound request in a MQL</description>
    <label>zzIs MQL</label>
    <type>Checkbox</type>
</CustomField>