unpackaged/main/default/objects/Trial_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Brand__c</columns>
    <columns>Behavior_Score__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Firm_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>MQL_Date_Time__c</columns>
    <columns>Type__c</columns>
    <columns>Person_Owner__c</columns>
    <columns>MQL_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>