unpackaged/main/default/objects/Trial_Request__c/listViews/Inbound_Request_Document_Automation.listView-meta.xml
<ListView>
    <fullName>Inbound_Request_Document_Automation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Document Automation</value>
    </filters>
    <label>Inbound Request: Document Automation</label>
</ListView>