unpackaged/main/default/objects/Trial_Request__c/listViews/Inbound_Request_Marketing_Ops.listView-meta.xml
<ListView>
    <fullName>Inbound_Request_Marketing_Ops</fullName>
    <columns>NAME</columns>
    <columns>Customer_Success_Qualifying_Rep2__c</columns>
    <columns>Person_Score__c</columns>
    <columns>First_Name__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Touch_Program__c</field>
        <operation>equals</operation>
        <value>MC-D-WB-2023-09: 5 Law Office Mishaps</value>
    </filters>
    <label>Inbound Request Marketing Ops</label>
</ListView>