unpackaged/main/default/objects/Trial_Request__c/listViews/MQLs.listView-meta.xml
<ListView>
    <fullName>MQLs</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Brand__c</columns>
    <columns>Behavior_Score__c</columns>
    <columns>Campaign_Name__c</columns>
    <columns>Firm_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Person_Owner__c</columns>
    <columns>MQL_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_MQL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>CPACharge</value>
    </filters>
    <label>MQLs: CPACharge</label>
    <sharedTo>
        <roleAndSubordinates>Sales_Manager_CPACharge_ClientPay</roleAndSubordinates>
    </sharedTo>
</ListView>